<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/white"
    android:orientation="vertical"
    app:contentInsetStart="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:foregroundGravity="center_vertical"
        android:paddingHorizontal="@dimen/_10dp">

        <LinearLayout
            android:id="@+id/ll_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_gravity="start|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_back_arrow"
                android:visibility="gone" />
        </LinearLayout>

        <plm.patientslikeme2.utils.usercontrol.UserTextView
            android:id="@+id/toolbar_title"
            style="@style/TextViewBold16"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="@dimen/_0dp"
            android:paddingTop="@dimen/_4dp"
            android:paddingEnd="@dimen/_10dp"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/ll_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="end|center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_messaging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_5dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_messages_without_badge_black" />

            <ImageView
                android:id="@+id/iv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_notification" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_close_dark_green"
                android:visibility="gone"
                app:tint="@color/black" />
        </LinearLayout>

        <plm.patientslikeme2.utils.usercontrol.UserButton
            android:id="@+id/btn_action"
            style="@style/ButtonDarkGreenBorder"
            android:layout_width="@dimen/_60dp"
            android:layout_height="@dimen/_30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/_5dp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_4dp"
            android:paddingTop="@dimen/_2dp"
            android:paddingEnd="@dimen/_4dp"
            android:textSize="@dimen/_13sp"
            android:visibility="gone"
            tools:text="Edit" />
    </RelativeLayout>
</androidx.appcompat.widget.Toolbar>
